# LegacyLens

./: .gitignore  DEMO_GUIDE.md  README.md  Tracking.md  bandit_output.txt  blueprint.md  debug_ext.txt  debug_raw.txt  debug_regen.java  demo.py  e2e_validation_results.md  faculty_demo.py  gap_analysis_2026_02_15.md  get_ast.py  get_fidelity.py  get_orig.py  mypy_output.txt  package-lock.json  package.json  parse_trace.py  pyproject.toml  sim.py  sim2.py  test_strip.py
.ablation_cache/: AntTask.compileFile_baseline_deepseek-coder_6.7b.json  AntTask.compileFile_rag_only_deepseek-coder_6.7b.json  AntTask.compileFile_repetition_simple_deepseek-coder_6.7b.json  AntTask.compileFile_repetition_verbose_deepseek-coder_6.7b.json  AntTask.compileFile_repetition_x3_deepseek-coder_6.7b.json  AntTask.compileFile_zero_shot_deepseek-coder_6.7b.json  AntTask.execute_baseline_deepseek-coder_6.7b.json  AntTask.execute_rag_only_deepseek-coder_6.7b.json  AntTask.execute_repetition_simple_deepseek-coder_6.7b.json  AntTask.execute_repetition_verbose_deepseek-coder_6.7b.json  AntTask.execute_repetition_x3_deepseek-coder_6.7b.json  AntTask.execute_zero_shot_deepseek-coder_6.7b.json  AntTask.log_baseline_deepseek-coder_6.7b.json  AntTask.log_rag_only_deepseek-coder_6.7b.json  AntTask.log_repetition_simple_deepseek-coder_6.7b.json  AntTask.log_repetition_verbose_deepseek-coder_6.7b.json  AntTask.log_repetition_x3_deepseek-coder_6.7b.json  AntTask.log_zero_shot_deepseek-coder_6.7b.json  Owner.addVisit_baseline_deepseek-coder_6.7b.json  Owner.addVisit_rag_only_deepseek-coder_6.7b.json  (+58 more)
(+78 files in other folders)
